--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,12 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
-logo: /images/isomer-logo.svg
-
+logo: /images/moh-logo-horizontal-official.png
 links:
+  - title: Get Vaccinated
+    url: /get-vaccinated/
+  - title: Health Advisory
+    url: /health-advisory/
+  - title: Locations
+    collection: locations
+  - title: FAQ
+    url: /faq
   - title: Contact Us
     url: /contact-us/
-  - title: Example Page
-    url: /example-page/
-  - title: Example Folder
-    collection: example-folder
